--- a/vercel.json
+++ b/vercel.json
@@ -26,7 +26,7 @@
         "DB_CONNECTION": "mysql",
         "DB_HOST": "ek85j4.h.filess.io",
         "DB_PORT": "3307",
-        "DB_DATABASE": "apoteku",
+        "DB_DATABASE": "apoteku_takentiny",
         "DB_PASSWORD": "ab98ea442b6f71bfb0a6dfbccf769be5dd2af507",
         "DB_USERNAME": "apoteku_takentiny"
     }
